# agro-mark

./: .dockerignore  Features.md  ProblemStatement.md  README.md  Techstack.md  Timeline.md  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile.dev  Dockerfile.prod  package-lock.json  package.json  tsconfig.json
backend/prisma/: schema.prisma
backend/src/: index.ts
backend/src/config/: db.config.ts
backend/src/controllers/: auth.controller.ts  order.controller.ts  product.controller.ts  review.controller.ts
backend/src/middlewares/: auth.middleware.ts  upload.middleware.ts
backend/src/routes/: auth.routes.ts  order.routes.ts  product.routes.ts  review.routes.ts
backend/src/services/: cache.service.ts  order.service.ts  product.service.ts  review.service.ts  solana.service.ts  upload.service.ts  user.service.ts
backend/src/types/: express.d.ts
backend/src/utils/: validation.utils.ts
docs/: api-specification.md  architecture.md  database-schema.md  frontend-mockups.md  project-status.md  smart-contracts.md
frontend/: Dockerfile.dev  Dockerfile.prod  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/hooks/: useCategories.ts  useEscrow.ts  useIPFS.ts  useSolanaProduct.ts
smart-contracts/: Anchor.toml  Dockerfile.dev
smart-contracts/programs/reputation/: Cargo.toml
smart-contracts/programs/reputation/src/: lib.rs
smart-contracts/scripts/: deploy.ts
smart-contracts/tests/: escrow.ts  integration.ts  marketplace.ts  reputation.ts
(+30 files in other folders)
