[package]
name = "reputation"
version = "0.1.0"
description = "AgroMark reputation program for storing seller reviews on Solana blockchain"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "reputation"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "1.17.0" 